--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,10 @@ nav ul li a {
 }
 
 .login-button {
-    padding: 0;
-    border: none;
+    padding: 10px 20px;
+    border: 2px solid #333;
+    border-radius: 5px;
+    background-color: transparent;
     color: #333;
     background-color: transparent;
     font-weight: 700;
@@ -64,15 +66,18 @@ nav ul li a {
 }
 
 .register-button {
-    background-color: #00bfa5;
-    color: #ffffff;
+    background-color: #f2f2f2;
+    color: #333;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
     border: none;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .register-button:hover {
-    background-color: #009624;
-    color: #ffffff;
+    background-color: #e0e0e0;
+    color: #333;
 }
 
 /* Hero Section */
@@ -82,7 +87,7 @@ nav ul li a {
     align-items: center;
     padding: 40px;
     background-color: #ffffff;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .hero-content {
@@ -156,12 +161,12 @@ nav ul li a {
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     padding: 0 50px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .service-item {
     background-color: #ffffff;
-    padding: 30px;
+    padding: 20px;
     border-radius: 10px;
     box-shadow: none;
     text-align: center;
