--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ nav ul li a {
 }
 
 .benefits {
-    list-style: none;
+    list-style: none; /* Deaktiviert Standardaufzählung */
     padding-left: 0;
     margin-top: 20px;
 }
@@ -132,7 +132,7 @@ nav ul li a {
 }
 
 .benefits li::before {
-    content: '\2705'; /* Unicode für Haken im Kreis */
+    content: '\2714'; /* Unicode für Haken im Kreis */
     color: #333;
     background-color: #fff;
     border: 2px solid #333;
@@ -140,6 +140,7 @@ nav ul li a {
     padding: 4px;
     margin-right: 10px;
 }
+
 
 .hero-images {
     display: flex;
