--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ nav ul li a {
     font-weight: 700;
     text-decoration: none;
     padding: 10px 20px;
-    border: 2px solid #333;
+    border: 2px solid transparent;
     border-radius: 5px;
     transition: color 0.3s ease, background-color 0.3s ease;
 }
@@ -75,7 +75,7 @@ nav ul li a:hover {
 
 .hero-content {
     max-width: 60%;
-    text-align: center;
+    text-align: left;
 }
 
 .hero-content h1 {
@@ -153,7 +153,7 @@ nav ul li a:hover {
 
 .service-item img {
     align-self: center;
-    width: 40px;
+    width: 60px;
     height: auto;
     margin-left: 15px;
     content: url('Heizung.png'); /* Ersetzt alle Bilder in den Kästen durch Heizung.png */
@@ -203,7 +203,18 @@ ul li {
 }
 
 ul li::before {
-    content: none;
+    content: '¹4';
+    color: #333;
+    border: 2px solid #333;
+    border-radius: 50%;
+    padding: 3px;
+    margin-right: 10px;
+    font-weight: bold;
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    text-align: center;
+    line-height: 1.5em;
 }
 
 /* Footer */
