--- a/styles.css
+++ b/styles.css
@@ -50,15 +50,45 @@ nav ul li a {
     color: #333;
     font-weight: 700;
     text-decoration: none;
-    padding: 10px 20px;
-    border: 2px solid transparent;
+    padding: 5px 15px;
+    border: 1px solid #333;
     border-radius: 5px;
-    transition: color 0.3s ease, background-color 0.3s ease;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+nav ul li a.button-login {
+    color: #333;
+    border: 1px solid #333;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: transparent;
+}
+
+nav ul li a.button-register {
+    background-color: #00c897;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 nav ul li a:hover {
     color: #ffffff;
-    background-color: #007bff;
+    background-color: #333;
+}
+
+nav ul li a.button-login:hover {
+    background-color: #333;
+    color: #ffffff;
+}
+
+nav ul li a.button-register:hover {
+    background-color: #00a57a;
+    color: #ffffff;
 }
 
 /* Hero Section */
@@ -205,7 +235,7 @@ ul li {
 ul li::before {
     content: '¹4';
     color: #333;
-    border: 2px solid #333;
+    border: 2px solid #007bff;
     border-radius: 50%;
     padding: 3px;
     margin-right: 10px;
